Fix spacing to move sign up button to end of cta
Added another container for just the text and turned the whole cta into a flex element

--- a/style.css
+++ b/style.css
@@ -161,12 +161,17 @@ img {
 
 .container-4 {
     background-color: white;
-    color: white
+    color: white;
+    justify-content: center;
 }
 
 .cta {
   background-color: #3882F6;  
   margin: 50px;
+  padding: 50px;
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-around;
 }
 
 .button {
